# genuine-chip8-emulator-rust

./: .gitignore  Cargo.toml  README.md
roms/: disp_check.ch8  key_check.ch8  test_simple_set_sub_skip.ch8  zero.ch8
src/: chip8cpu.rs  chip8disp.rs  chip8mem.rs  chip8timer.rs  main.rs
src/chip8/: mod.rs
src/chip8/cpu/: mod.rs
src/chip8/display/: mod.rs
src/chip8/memory/: mod.rs
src/chip8/timer/: mod.rs
src/loader/: mod.rs
