[package]
name = "genuine-chip8-emulator-rust"
version = "0.1.0"
authors = ["Kumar Ravi <rdahiya0213@gmail.com>", "Abhinav Tripathi <genuineabhinav@gmail.com>"]
edition = "2018"

[dependencies]
byteorder = "1.3.2"
chrono = "0.4"
device_query = "0.1.0"
time = "0.1.42"
piston = "0.49.0"
piston2d-graphics = "0.34.0"
pistoncore-glutin_window = "0.63.0"
piston2d-opengl_graphics = "0.68.0"
piston_window = "0.103.0"
rand = "0.7.0"
