[package]
name = "genuine-chip8-emulator-rust"
version = "0.1.0"
authors = ["Kumar Ravi <rdahiya0213@gmail.com>", "Abhinav Tripathi <genuineabhinav@gmail.com>"]
edition = "2018"

[dependencies]
byteorder = "1.3.2"
chrono = "0.4"
time = "0.3.30"
piston = "0.55.0"
piston2d-graphics = "0.44.0"
pistoncore-glutin_window = "0.72.0"
piston2d-opengl_graphics = "0.83.0"
piston_window = "0.131.0"
rand = "0.8.5"
